Switch to JUnit engine and add surefire updated artifact